[findbugs] DM_BOOLEAN_CTOR